# hello-worlds

./: .gitignore  CLUSTER.md  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  evaluate_graph_jepa.py  pyproject.toml  train_graph_jepa.py  visualize_graph_jepa.py
archive/: README.md  __init__.py
archive/fourier_jepa/: README.md  __init__.py  encoder.py  smoke.py  train.yaml
archive/graph_jepa/: README.md  TCP_GRAPH_JEPA.md  (+1 more)
cluster/: baseline_riemann.sbatch  bench_fourier.sbatch  build_venv.sbatch  eval_ijepa_pool.sbatch  eval_tuev.sbatch  eval_v3.sbatch  graph_jepa.sbatch  launch_pretrain_frac.sh  launch_sweep.sh  smoke.sbatch  smoke_fourier.sbatch  train.sbatch  train_fourier.sbatch  train_ijepa.sbatch  train_ijepa_v2.sbatch  train_ijepa_v3.sbatch  train_ijepa_v3_100ep.sbatch  train_ijepa_v3_seed.sbatch  train_ijepa_v4.sbatch  train_jepa_ablation.sbatch  train_supervised.sbatch  train_tuev.sbatch  train_tuev_wm.sbatch  tuev.sbatch  tusz_general.sbatch
docs/: audit_notes_for_slides.md  contribution_skeleton.md  eeg_benchmark_tutorial.md  fourier_jepa.md  geometry_tangent_analysis.md  positioning.md  research_handoff.md  riemannian_eeg_approach.md  tcp_graph_jepa.md
eb_jepa/: __init__.py  losses.py
presentation/: .gitignore  Makefile  README.md  main.tex  recolor_figures.py
results/: collapse_data.json  label_eff.json
src/: __init__.py
tasks/: lessons.md  todo.md
tests/: test_anomaly_scoring.py  test_core_eeg_pipeline.py  test_fourier_encoder.py  test_graph_jepa_forward.py  test_tcp_graph.py
tools/: build_tusz_filelist.py  check_patient_disjoint.py
(+144 files in other folders)
