[project]
name = "hello-worlds-eeg"
version = "0.1.0"
description = "Geometry-aware SIGReg/PEIRA JEPA for EEG abnormality detection (TUAB)"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy",
    "scipy",
    "scikit-learn>=1.3",
    "omegaconf",
    "pyyaml",
    "einops",
    "wandb",
    "pyedflib",
    "pyriemann>=0.6",
    "mne",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

# NOTE on torch: install the wheel matching the cluster CUDA. On aarch64 (GB200)
# use the PyTorch cu128 index; on x86_64 B200 a standard cu12x wheel is fine.
# e.g.  uv pip install torch --index-url https://download.pytorch.org/whl/cu128

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["archive*", "eb_jepa*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
